HomePage/style.css
/* Set base font size for mobile devices */
html {
    font-size: 75%;
}

/* Remove margins from body */
.body {
    margin: 0;
}

#albumSection {
    width: 100%;
    background-color: lightgoldenrodyellow;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    gap: 1.5rem;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: bold;
    padding-bottom: 13vh; /* Offset the footer */
}

#albumSection h {
    padding-top: 2rem;
    font-size: 5rem;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: rgb(69, 69, 69);
}

.imageCaption {
    color: #bd162c;
}

.imageCard img {
    height: 32.5rem;
    width: 32.5rem;
    border-radius: 1.25rem;
    object-fit: cover;
}

.imageCard {
    display: inline-block;
    background-color: lightsteelblue;
    text-align: center;
    height: 39rem;
    width: 32.5rem;
    overflow: hidden;
    margin: 1rem;
    border-radius: 2.5rem;

    --g: 4px;
    /* the gap */
    --b: 12px;
    /* border thickness*/
    --c: #669706;
    /* the color */


    padding: calc(var(--g) + var(--b));
    --_c: #0000 0 25%, var(--c) 0 50%;
    --_g1: repeating-linear-gradient(90deg, var(--_c)) repeat-x;
    --_g2: repeating-linear-gradient(180deg, var(--_c)) repeat-y;
    background:
        var(--_g1) var(--_p, 25%) 0, var(--_g2) 0 var(--_p, 125%),
        var(--_g1) var(--_p, 125%) 100%, var(--_g2) 100% var(--_p, 25%);
    background-size: 200% var(--b), var(--b) 200%;
    cursor: pointer;
    filter: grayscale(70%);
    cursor: grab;
}

.imageCard:hover {
    --_p: 75%;
    filter: grayscale(0%);
    scale: 1.1;
    transition: 0.5s;
}

.sortable-chosen{
    --_p: 75%;
    filter: grayscale(0%);
    scale: 1.1;
    transition: 0.5s;
}

